tests/errors/generic-function-pointer-uninferred.ari
fn keep[T](value: i64) -> i64 {
  value
}

fn main() -> i64 {
  let op: fn(i64) -> i64 = keep;
  op(1)
}
